@@ -143,6 +143,26 @@ This may breaks if the sPayload args or value contain a | -
 we will probably replace this with json or pickled serialization, or kombu.
 
 
+### Examples
+
+There are some example OTCmd2 command scripts in the `share/examples`
+directory that you can run from the command line with the stdin
+from these files:
+
+For example, under Msys or Unix this would be:
+```
+OTCmd2 -P "c:\\Program Files\\MetaTrader"  < tests/OTCmd2-0.test
+```
+Where the `-P` option is the path to your Metatrader installation
+with `OTMql4QQMP` installed.
+
+You should see no assertion errors,  and you should see no timeouts:
+```
+WARN: No retval returned in 60 seconds
+```
+
+Note that you can use this scripting to open and close orders.
+
 
 ## Pandas love Omlettes!
 
