@@ -1,0 +1,29 @@
+set echo True
+sub run retval.# timer.#
+pub wait AccountBalance
+py assert type(self._G) == float and type(self._G) > 0
+pub wait AccountCompany
+pub wait AccountCredit
+py assert type(self._G) == float
+pub wait AccountCurrency
+py assert type(self._G) == str and len(self._G) >= 3
+pub wait AccountEquity
+py assert type(self._G) == float
+pub wait AccountFreeMargin
+py assert type(self._G) == float
+pub wait AccountFreeMarginMode
+py assert type(self._G) == float
+pub wait AccountLeverage
+py assert type(self._G) == int and self._G > 0
+pub wait AccountMargin
+py assert type(self._G) == int
+pub wait AccountName
+py assert type(self._G) == str and len(self._G) > 3
+pub wait AccountNumber
+py assert type(self._G) == int and self._G > 0
+pub wait AccountProfit
+py assert type(self._G) == float
+pub wait AccountServer
+py assert type(self._G) == str and len(self._G) > 3
+pub wait AccountStopoutLevel
+pub wait AccountStopoutMode
